[package]
name = "wgconfd"
version = "0.1.1"
authors = ["Hristo Venev <hristo@venev.name>"]
edition = "2018"

[dependencies]
arrayref = { version = "0.3.5" }
base64 = { version = "0.10.1" }
serde = { version = "1.0.89" }
serde_derive = { version = "1.0.89" }
serde_json = { version = "1.0.39" }
chrono = { version = "0.4.6", default-features = false }
toml = { version = "0.5" }

[profile.release]
panic = "abort"
lto = true
